crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__query_dataset__simple_dataset_default_schema.snap
---
source: crates/store/re_redap_tests/src/tests/query_dataset.rs
expression: required_chunk_info.format_schema_snapshot()
---
chunk_byte_size: u64
chunk_entity_path: Utf8 [
    rerun:kind: "control"
]
chunk_id: FixedSizeBinary[16] [
    rerun:kind: "control"
]
chunk_is_static: bool [
    rerun:kind: "control"
]
chunk_key: Binary
chunk_segment_id: Utf8 [
    rerun:kind: "control"
]
rerun_segment_layer: Utf8
